--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -11,7 +11,7 @@
 	--10x: 80px;
 
 	--color-white: #FFF;
-	--color-black: #000;
+	--color-black: #272432;
 
 	--color-lighter-gray: #E9EBEB;
 	--color-light-gray: #C2C2C2;
@@ -44,13 +44,15 @@
 	--font-family-monospace: 'Fira Mono', monospace;
 
 	--font-size-base: 16px;
-	--font-size-large: 18px;
+	--font-size-large: 20px;
+	--font-size-x-large: 28px;
 	--font-size-small: 14px;
 	--font-size-x-small: 12px;
 
 	--font-weight-base: 300;
 	--font-weight-medium: 400;
-	--font-weight-bold: 500;
+	--font-weight-semi-bold: 500;
+	--font-weight-bold: 600;
 
 	--line-height-base: 1.5;
 
