Update text field style

--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -56,6 +56,8 @@
 
 	--line-height-base: 1.5;
 
+	--box-shadow-low: 3px 3px 0 #27243233;
+
 	--transition: all 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 
 	background: #f0f0f1;
