--- a/packages/block-editor/src/components/TextField/style.css
+++ b/packages/block-editor/src/components/TextField/style.css
@@ -1,25 +1,22 @@
 .TextField {
-	margin-bottom: var(--3x);
-	max-width: 520px;
+	background: var(--color-white);
+	border: 2px solid var(--color-black);
+	border-radius: 7px;
+	box-shadow: var(--box-shadow-low);
+	display: grid;
+	gap: var(--1x);
+	grid-auto-flow: row;
+	grid-template-columns: 100%;
+	max-width: 640px;
+	padding: var(--1x);
 
-	&:last-child {
-		margin-bottom: 0;
-	}
-
-	& input[type=text] {
-		border: 1px solid var(--color-gray);
-		border-radius: 5px;
-		box-sizing: border-box;
-		display: block;
-		font-size: var(--font-size);
-		font-weight: var(--font-weight-base);
-		height: var(--6x);
-		line-height: calc(var(--6x) - 2px);
-		padding: 0 var(--2x);
-		width: 100%;
-	}
-
-	& input[type=text]:focus {
-		outline: none;
+	.EditableString {
+		--focus-margin: 0;
+		--focus-padding: 0;
+		--placeholder-color: var(--color-gray);
+		--placeholder-focus-color: var(--color-gray);
+		font-size: var(--font-size-large);
+		font-weight: var(--font-weight-semi-bold);
+		line-height: 1;
 	}
 }
