--- a/packages/block-editor/src/components/PageBlockJson/style.css
+++ b/packages/block-editor/src/components/PageBlockJson/style.css
@@ -34,6 +34,7 @@
 	grid-auto-flow: column;
 	font-size: var(--font-size-large);
 	font-weight: var(--font-weight-medium);
+	user-select: none;
 }
 
 .PageBlockJson-json {
