Update styles on list field

--- a/packages/block-editor/src/components/EditableString/style.css
+++ b/packages/block-editor/src/components/EditableString/style.css
@@ -4,15 +4,20 @@
 	--focus-margin: 0.2em;
 	--focus-padding: 0.4em;
 	--hover-color: var(--color-black);
+	--line-height: 1.5em;
+	--margin: 0;
+	--padding: 0;
 	--placeholder-color: var(--color-dark-gray);
 	--placeholder-focus-color: var(--color-darker-gray);
 	--rows: 1;
 	color: var(--color);
 	cursor: text;
 	display: inline-grid;
+	margin: 0 var(--margin);
 	max-width: 100%;
-	min-height: calc(1.5em * var(--rows));
+	min-height: calc(var(--line-height) * var(--rows));
 	overflow: auto;
+	padding: 0 var(--padding);
 	position: relative;
 	transition: var(--transition);
 	white-space: nowrap;
