--- a/packages/block-editor/src/components/ListField/style.css
+++ b/packages/block-editor/src/components/ListField/style.css
@@ -1,43 +1,35 @@
 .ListField {
-	margin-bottom: var(--3x);
-	max-width: 520px;
-
-	&:last-child {
-		margin-bottom: 0;
-	}
+	background: var(--color-white);
+	border: 2px solid var(--color-black);
+	border-radius: 7px;
+	box-shadow: var(--box-shadow-low);
+	display: grid;
+	gap: var(--1x);
+	grid-auto-flow: row;
+	grid-template-columns: 100%;
+	max-width: 640px;
+	padding: var(--1x);
 }
 
-.ListField-input {
+.ListField-list {
 	align-items: center;
-	border: 1px solid var(--color-gray);
-	border-radius: 5px;
-	box-sizing: border-box;
-	display: grid;
+	display: flex;
 	font-size: var(--font-size-small);
 	font-weight: var(--font-weight-base);
-	grid-auto-columns: max-content;
-	grid-auto-flow: column;
-	grid-gap: var(--1x);
-	height: var(--6x);
-	padding: 0 var(--2x);
+	gap: var(--1x);
 	width: 100%;
 
 	.EditableString {
-		border-radius: 2em;
-		height: var(--3x);
-		line-height: var(--3x);
-		margin: 0;
-		padding: 0;
-	}
-
-	.EditableString.has-focus {
-		margin: 0;
-		padding: 0;
+		--focus-margin: 0;
+		--focus-padding: 0;
+		--line-height: var(--3x);
+		border-radius: var(--3x);
 	}
 
 	.EditableString.has-value {
-		background: var(--color-light-gray);
+		--focus-padding: var(--1x);
+		--padding: var(--1x);
+		background: var(--color-lighter-gray);
 		font-weight: var(--font-weight-bold);
-		padding: 0 var(--1x);
 	}
 }
