--- a/packages/block-editor/src/components/Navigator/style.css
+++ b/packages/block-editor/src/components/Navigator/style.css
@@ -5,8 +5,10 @@
 	grid-template-columns: 1fr max-content;
 	height: calc(var(--7x) + 3px);
 	padding-right: var(--5x);
-	position: relative;
+	position: sticky;
+	top: var(--wp-admin--admin-bar--height);
 	user-select: none;
+	z-index: 50;
 
 	& ul {
 		display: grid;
