--- a/packages/block-editor/src/components/Tooltip/style.css
+++ b/packages/block-editor/src/components/Tooltip/style.css
@@ -17,3 +17,9 @@
 	background: var(--color-accent-teal-blue);
 	color: var(--color-white);
 }
+
+.is-disabled .Tooltip:hover {
+	background: var(--color-lighter-gray);
+	color: var(--color-dark-gray);
+	cursor: default;
+}
