--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -25,9 +25,9 @@
 	--color-dark-slate: #8198A7;
 	--color-darker-slate: #5D7382;
 
-	--color-accent-teal: #00E8B8;
-	--color-accent-teal-blue: #03AECF;
-	--color-accent-blue: #0575E6;
+	--color-accent-teal: #00FFBA;
+	--color-accent-teal-blue: #00B2D0;
+	--color-accent-blue: #006BE5;
 	--color-accent-purple: #7F1192;
 	--color-accent-pink: #B10A50;
 	--color-accent-red: #E6255D;
@@ -37,8 +37,9 @@
 	--color-code-property: #B10A50;
 	--color-code-value: #EA971A;
 
-	--gradient-orange-red: linear-gradient(135deg, var(--color-accent-orange), var(--color-accent-red));
-	--gradient-teal-blue: linear-gradient(135deg, var(--color-accent-teal), var(--color-accent-blue));
+	--gradient-orange-red: linear-gradient(150deg, var(--color-accent-orange), var(--color-accent-red));
+	--gradient-teal-blue: linear-gradient(150deg, var(--color-accent-teal), var(--color-accent-blue));
+	--gradient-light-gray: linear-gradient(150deg, var(--color-lighter-gray), var(--color-light-gray));
 
 	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 	--font-family-monospace: 'Fira Mono', monospace;
@@ -46,6 +47,7 @@
 	--font-size-base: 16px;
 	--font-size-large: 20px;
 	--font-size-x-large: 28px;
+	--font-size-xx-large: 40px;
 	--font-size-small: 14px;
 	--font-size-x-small: 12px;
 
@@ -59,6 +61,8 @@
 	--box-shadow-low: 3px 3px 0 #27243233;
 
 	--transition: all 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+
+	--app-height: max(680px, calc(100vh - 65px - var(--wp-admin--admin-bar--height)));
 
 	background: #f0f0f1;
 	color: var(--color-black);
