--- a/packages/block-editor/src/components/PageEditorCss/style.css
+++ b/packages/block-editor/src/components/PageEditorCss/style.css
@@ -1,7 +1,7 @@
 .PageEditorCss {
 	box-sizing: border-box;
 	display: grid;
-	height: max(680px, calc(100vh - 65px - var(--wp-admin--admin-bar--height)));
+	height: var(--app-height);
 	padding: var(--5x);
 }
 
