Clean up styles a bit

--- a/packages/block-editor/src/components/DashiconsField/style.css
+++ b/packages/block-editor/src/components/DashiconsField/style.css
@@ -1,34 +1,22 @@
-.SelectField {
-	margin-bottom: var(--3x);
-	max-width: 520px;
+.DashiconsField {
+	align-items: center;
+	aspect-ratio: 1 / 1;
+	background: var(--color-white);
+	border: 2px solid var(--color-black);
+	border-radius: 7px;
+	box-shadow: var(--box-shadow-low);
+	box-sizing: border-box;
+	display: grid;
+	height: 64px;
+	justify-items: center;
+	padding: var(--1x);
 	position: relative;
+	width: 64px;
 
-	&:last-child {
-		margin-bottom: 0;
+	span {
+		font-size: 36px;
+		height: 36px;
+		width: 36px;
 	}
 }
 
-.SelectField-value {
-	border: 1px solid var(--color-gray);
-	border-radius: 5px;
-	box-sizing: border-box;
-	display: block;
-	font-size: var(--font-size);
-	font-weight: var(--font-weight-base);
-	height: var(--6x);
-	line-height: calc(var(--6x) - 2px);
-	padding: 0 var(--2x);
-	width: 100%;
-}
-
-.SelectField-options {
-	display: none;
-	left: 0;
-	position: absolute;
-	top: 100%;
-	width: 100%;
-}
-
-.SelectField.is-open .SelectField-options {
-	display: block;
-}
