--- a/packages/block-editor/src/components/BlueprintSidebar/style.css
+++ b/packages/block-editor/src/components/BlueprintSidebar/style.css
@@ -12,7 +12,7 @@
 		grid-row: 1;
 		height: 100%;
 		overflow: auto;
-		padding: var(--5x) var(--3x);
+		padding: 0 0 0 var(--3x);
 		width: 100%;
 	}
 }
