--- a/packages/block-editor/src/components/Navigator/style.css
+++ b/packages/block-editor/src/components/Navigator/style.css
@@ -3,7 +3,7 @@
 	background: var(--color-white);
 	display: grid;
 	grid-template-columns: 1fr max-content;
-	height: calc(var(--7x) + 3px);
+	height: calc(var(--navigator-height) + 3px);
 	padding-right: var(--5x);
 	position: sticky;
 	top: var(--wp-admin--admin-bar--height);
@@ -13,7 +13,7 @@
 	& ul {
 		display: grid;
 		grid-auto-flow: column;
-		height: calc(var(--7x) + 3px);
+		height: calc(var(--navigator-height) + 3px);
 		justify-content: start;
 		list-style: none;
 		margin: 0;
