--- a/packages/block-editor/src/components/BlueprintSidebarItem/style.css
+++ b/packages/block-editor/src/components/BlueprintSidebarItem/style.css
@@ -1,12 +1,33 @@
 .BlueprintSidebarItem {
-	background: var(--color-white);
-	border-radius: 5px;
-	box-shadow: 0 1px 9px rgba(0, 0, 0, 0.1);
-	cursor: grab;
-	font-size: var(--font-size-small);
 	margin: 0 0 var(--1x);
-	padding: var(--2x);
 	position: relative;
+
+	> div {
+		border-radius: 7px;
+		box-shadow: 0 1px 9px rgba(0, 0, 0, 0.1);
+		cursor: grab;
+		font-size: var(--font-size-small);
+		padding: calc(var(--2x) + 2px);
+		position: relative;
+	}
+
+	> div::before {
+		background: var(--color-white);
+		border-radius: 5px;
+		bottom: 2px;
+		content: '';
+		display: block;
+		left: 2px;
+		position: absolute;
+		right: 2px;
+		top: 2px;
+		z-index: 1;
+	}
+
+	> div > div {
+		position: relative;
+		z-index: 2;
+	}
 
 	&:last-child {
 		margin-bottom: 0;
@@ -15,6 +36,10 @@
 	.ProFlag {
 		margin-top: var(--1x);
 	}
+}
+
+.BlueprintSidebarItem.is-pro > div {
+	background: var(--gradient-teal-blue);
 }
 
 .BlueprintSidebarItem.is-clone {
