--- a/packages/block-editor/src/components/BlueprintSidebarItem/style.css
+++ b/packages/block-editor/src/components/BlueprintSidebarItem/style.css
@@ -3,25 +3,15 @@
 	position: relative;
 
 	> div {
+		background: var(--color-white);
+		background-clip: border-box;
+		border: 2px solid var(--color-black);
 		border-radius: 7px;
-		box-shadow: 0 1px 9px rgba(0, 0, 0, 0.1);
+		box-shadow: var(--box-shadow-low);
 		cursor: grab;
 		font-size: var(--font-size-small);
 		padding: calc(var(--2x) + 2px);
 		position: relative;
-	}
-
-	> div::before {
-		background: var(--color-white);
-		border-radius: 5px;
-		bottom: 2px;
-		content: '';
-		display: block;
-		left: 2px;
-		position: absolute;
-		right: 2px;
-		top: 2px;
-		z-index: 1;
 	}
 
 	> div > div {
@@ -38,8 +28,24 @@
 	}
 }
 
-.BlueprintSidebarItem.is-pro > div {
-	background: var(--gradient-teal-blue);
+.BlueprintSidebarItem.is-pro {
+	> div {
+		background: var(--gradient-teal-blue);
+		border: 0;
+	}
+
+	> div::before {
+		background: var(--color-white);
+		border-radius: 5px;
+		bottom: 2px;
+		content: '';
+		display: block;
+		left: 2px;
+		position: absolute;
+		right: 2px;
+		top: 2px;
+		z-index: 1;
+	}
 }
 
 .BlueprintSidebarItem.is-clone {
