--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -1,84 +1,107 @@
 .App {
-	--1x: 8px;
-	--2x: 16px;
-	--3x: 24px;
-	--4x: 32px;
-	--5x: 40px;
-	--6x: 48px;
-	--7x: 56px;
-	--8x: 64px;
-	--9x: 72px;
-	--10x: 80px;
+    --1x: 8px;
+    --2x: 16px;
+    --3x: 24px;
+    --4x: 32px;
+    --5x: 40px;
+    --6x: 48px;
+    --7x: 56px;
+    --8x: 64px;
+    --9x: 72px;
+    --10x: 80px;
+    --11x: 88px;
+    --12x: 96px;
 
-	--color-white: #FFF;
-	--color-black: #272432;
+    --color-white: #fff;
+    --color-black: #272432;
 
-	--color-lighter-gray: #E9EBEB;
-	--color-light-gray: #C2C2C2;
-	--color-gray: #9A9A9A;
-	--color-dark-gray: #7C7C7C;
-	--color-darker-gray: #5D5D5D;
-	--color-darkest-gray: #272432;
+    --color-lighter-gray: #e9ebeb;
+    --color-light-gray: #c2c2c2;
+    --color-gray: #9a9a9a;
+    --color-dark-gray: #7c7c7c;
+    --color-darker-gray: #5d5d5d;
+    --color-darkest-gray: #272432;
 
-	--color-light-slate: #D6E5EF;
-	--color-slate: #A3BFD4;
-	--color-dark-slate: #8198A7;
-	--color-darker-slate: #5D7382;
+    --color-light-slate: #d6e5ef;
+    --color-slate: #a3bfd4;
+    --color-dark-slate: #8198a7;
+    --color-darker-slate: #5d7382;
 
-	--color-accent-teal: #00FFBA;
-	--color-accent-teal-blue: #00B2D0;
-	--color-accent-blue: #006BE5;
-	--color-accent-purple: #7F1192;
-	--color-accent-pink: #B10A50;
-	--color-accent-red: #E6255D;
-	--color-accent-orange: #EF3E23;
-	--color-accent-yellow: #EA971A;
+    --color-accent-teal: #00ffba;
+    --color-accent-teal-blue: #00b2d0;
+    --color-accent-blue: #006be5;
+    --color-accent-purple: #7f1192;
+    --color-accent-pink: #b10a50;
+    --color-accent-red: #e6255d;
+    --color-accent-orange: #ef3e23;
+    --color-accent-yellow: #ea971a;
 
-	--color-code-property: #B10A50;
-	--color-code-value: #EA971A;
+    --color-code-property: #b10a50;
+    --color-code-value: #ea971a;
 
-	--gradient-orange-red: linear-gradient(150deg, var(--color-accent-orange), var(--color-accent-red));
-	--gradient-teal-blue: linear-gradient(150deg, var(--color-accent-teal), var(--color-accent-blue));
-	--gradient-light-gray: linear-gradient(150deg, var(--color-lighter-gray), var(--color-light-gray));
+    --gradient-orange-red: linear-gradient(
+        150deg,
+        var(--color-accent-orange),
+        var(--color-accent-red)
+    );
+    --gradient-teal-blue: linear-gradient(
+        150deg,
+        var(--color-accent-teal),
+        var(--color-accent-blue)
+    );
+    --gradient-light-gray: radial-gradient(
+        ellipse at right,
+        var(--color-lighter-gray),
+        var(--color-light-gray)
+    );
+    --gradient-purple-pink: radial-gradient(
+        ellipse at bottom,
+        #9e05e6,
+        #5200bb
+    );
 
-	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-	--font-family-monospace: 'Fira Mono', monospace;
+    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    --font-family-monospace: "Fira Mono", monospace;
 
-	--font-size-base: 16px;
-	--font-size-large: 20px;
-	--font-size-x-large: 28px;
-	--font-size-xx-large: 40px;
-	--font-size-small: 14px;
-	--font-size-x-small: 12px;
+    --font-size-base: 16px;
+    --font-size-large: 20px;
+    --font-size-x-large: 28px;
+    --font-size-xx-large: 40px;
+    --font-size-small: 14px;
+    --font-size-x-small: 12px;
 
-	--font-weight-base: 300;
-	--font-weight-medium: 400;
-	--font-weight-semi-bold: 500;
-	--font-weight-bold: 600;
+    --font-weight-base: 300;
+    --font-weight-medium: 400;
+    --font-weight-semi-bold: 500;
+    --font-weight-bold: 600;
 
-	--line-height-base: 1.5;
+    --line-height-base: 1.5;
 
-	--box-shadow-low: 3px 3px 0 #27243233;
-	--box-shadow-x-low: 2px 2px 0 #27243233;
+    --box-shadow-low: 3px 3px 0 #27243233;
+    --box-shadow-x-low: 2px 2px 0 #27243233;
 
-	--transition: all 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    --transition: all 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 
-	--app-height: max(680px, calc(100vh - 65px - var(--wp-admin--admin-bar--height)));
-	--navigator-height: var(--7x);
+    --app-height: max(
+        680px,
+        calc(100vh - 65px - var(--wp-admin--admin-bar--height))
+    );
+    --navigator-height: var(--7x);
 
-	background: #f0f0f1;
-	color: var(--color-black);
-	display: grid;
-	grid-template-rows: 65px max-content;
-	font-family: var(--font-family);
-	font-size: var(--font-size-base);
-	font-weight: var(--font-weight-base);
-	line-height: var(--line-height-base);
-	position: relative;
+    background: #f0f0f1;
+    color: var(--color-black);
+    display: grid;
+    grid-template-rows: 65px max-content;
+    font-family: var(--font-family);
+    font-size: var(--font-size-base);
+    font-weight: var(--font-weight-base);
+    line-height: var(--line-height-base);
+    position: relative;
 
-	.is-disabled {
-		cursor: default;
-		opacity: 0.5;
-		user-select: none;
-	}
+    .is-disabled {
+        cursor: default;
+        opacity: 0.5;
+        user-select: none;
+    }
 }
