--- a/packages/block-editor/src/components/BlueprintSidebarItem/style.css
+++ b/packages/block-editor/src/components/BlueprintSidebarItem/style.css
@@ -1,79 +1,65 @@
 .BlueprintSidebarItem {
-	margin: 0 0 var(--1x);
-	position: relative;
+    background: var(--color-white);
+    background-clip: border-box;
+    border: 2px solid var(--color-black);
+    border-radius: 7px;
+    box-shadow: var(--box-shadow-low);
+    cursor: grab;
+    font-size: var(--font-size-small);
+    padding: calc(var(--2x) + 2px);
+    position: relative;
 
-	> div {
-		background: var(--color-white);
-		background-clip: border-box;
-		border: 2px solid var(--color-black);
-		border-radius: 7px;
-		box-shadow: var(--box-shadow-low);
-		cursor: grab;
-		font-size: var(--font-size-small);
-		padding: calc(var(--2x) + 2px);
-		position: relative;
-	}
-
-	> div > div {
-		position: relative;
-		z-index: 2;
-	}
-
-	&:last-child {
-		margin-bottom: 0;
-	}
-
-	.ProFlag {
-		margin-top: var(--1x);
-	}
-}
-
-.BlueprintSidebarItem.is-pro {
-	> div {
-		background: var(--gradient-teal-blue);
-		border: 0;
-	}
-
-	> div::before {
-		background: var(--color-white);
-		border-radius: 5px;
-		bottom: 2px;
-		content: '';
-		display: block;
-		left: 2px;
-		position: absolute;
-		right: 2px;
-		top: 2px;
-		z-index: 1;
-	}
+    &::after {
+        bottom: 0;
+        content: "";
+        display: block;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 9;
+    }
 }
 
 .BlueprintSidebarItem.is-clone {
-	bottom: 0;
-	left: 0;
-	opacity: 0;
-	position: absolute;
-	right: 0;
-	top: 0;
-	z-index: 10;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 10;
 }
 
 .BlueprintSidebarItem.is-clone.react-draggable-dragging {
-	cursor: grabbing;
-	opacity: 0.6;
+    cursor: grabbing;
+    opacity: 0.6;
 }
 
 .BlueprintSidebarItem-label {
-	color: var(--color-darkest-gray);
-	font-weight: var(--font-weight-medium);
+    color: var(--color-darkest-black);
+    font-size: var(--font-size-base);
+    font-weight: var(--font-weight-semi-bold);
+    text-align: center;
 }
 
 .BlueprintSidebarItem.is-html .BlueprintSidebarItem-label {
-	font-family: var(--font-family-monospace);
-	font-size: var(--font-size-x-small);
-	font-weight: var(--font-weight-bold);
+    font-family: var(--font-family-monospace);
+    font-size: var(--font-size-base);
+    font-weight: var(--font-weight-bold);
 }
 
 .BlueprintSidebarItem-description {
-	color: var(--color-darker-gray);
+    color: var(--color-darker-gray);
+    text-align: center;
+}
+
+.BlueprintSidebarItem-icon {
+    display: block;
+    height: var(--4x);
+    margin: 0 auto var(--1x);
+    object-fit: contain;
+    object-position: center;
+    user-select: none;
+    width: var(--4x);
 }
