--- a/packages/block-editor/src/components/BlueprintEditor/style.css
+++ b/packages/block-editor/src/components/BlueprintEditor/style.css
@@ -1,10 +1,7 @@
 .BlueprintEditor {
     --column-1-width: 20;
     --column-2-width: calc(32 + var(--column-2-depth, 0));
-    --column-3-width: calc(32 + var(--column-3-depth, 0));
-    --column-4-width: calc(32 + var(--column-4-depth, 0));
-    --column-5-width: calc(32 + var(--column-5-depth, 0));
-    --grid-gap: 6;
+    --grid-gap: 8;
     --grid-padding: 4;
     background: var(--color-darkest-gray);
     border-radius: 9px;
@@ -93,9 +90,7 @@
     width: calc(
         16px *
             (
-                var(--column-1-width) + var(--column-2-width) +
-                    var(--column-3-width) + var(--column-4-width) +
-                    var(--column-5-width) + (var(--grid-gap) * 4) +
+                var(--column-1-width) + var(--column-2-width) + var(--grid-gap) +
                     (var(--grid-padding) * 2)
             ) - 1px
     );
@@ -107,11 +102,9 @@
     display: grid;
     flex-shrink: 0;
     gap: calc(16px * var(--grid-gap));
-    grid-template-columns:
-        calc(var(--column-1-width) * 16px) calc(var(--column-2-width) * 16px)
-        calc(var(--column-3-width) * 16px) calc(var(--column-4-width) * 16px) calc(var(
-                    --column-5-width
-                ) * 16px);
+    grid-template-columns: calc(var(--column-1-width) * 16px) calc(
+            var(--column-2-width) * 16px
+        );
     min-height: 100%;
     min-width: 100%;
     padding: calc(16px * var(--grid-padding));
