--- a/packages/block-editor/src/components/Navigator/style.css
+++ b/packages/block-editor/src/components/Navigator/style.css
@@ -1,136 +1,106 @@
 .Navigator {
-	align-items: center;
-	background: var(--color-white);
-	display: grid;
-	grid-template-columns: 1fr max-content;
-	height: calc(var(--navigator-height) + 3px);
-	padding-right: var(--5x);
-	position: sticky;
-	top: var(--wp-admin--admin-bar--height);
-	user-select: none;
-	z-index: 50;
+    align-items: center;
+    background: var(--color-white);
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    height: calc(var(--navigator-height) + 3px);
+    padding-right: var(--5x);
+    position: sticky;
+    top: var(--wp-admin--admin-bar--height);
+    user-select: none;
+    z-index: 50;
 
-	& ul {
-		display: grid;
-		grid-auto-flow: column;
-		height: calc(var(--navigator-height) + 3px);
-		justify-content: start;
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		position: relative;
-		z-index: 2;
-	}
+    & ul {
+        display: grid;
+        grid-auto-flow: column;
+        height: calc(var(--navigator-height) + 3px);
+        justify-content: start;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        z-index: 2;
+    }
 
-	& li {
-		cursor: pointer;
-		font-size: var(--font-size-base);
-		font-weight: var(--font-weight-semi-bold);
-		height: var(--3x);
-		margin: 0;
-		padding: var(--2x) var(--4x) calc(var(--2x) + 3px);
-		position: relative;
-		transition: var(--transition);
-	}
+    & li {
+        cursor: pointer;
+        font-size: var(--font-size-base);
+        font-weight: var(--font-weight-semi-bold);
+        height: var(--3x);
+        margin: 0;
+        padding: var(--2x) var(--4x) calc(var(--2x) + 3px);
+        position: relative;
+        transition: var(--transition);
+    }
 
-	& li span {
-		background: var(--color-white);
-		color: var(--color-darkest-gray);
-		display: block;
-		height: var(--3x);
-		line-height: var(--3x);
-		mix-blend-mode: luminosity;
-		padding: 0 var(--1x);
-	}
+    & li span {
+        background: var(--color-white);
+        color: var(--color-darkest-gray);
+        display: block;
+        height: var(--3x);
+        line-height: var(--3x);
+        mix-blend-mode: luminosity;
+        padding: 0 var(--1x);
+    }
 
-	& li::before {
-		background: var(--gradient-teal-blue);
-		bottom: calc(var(--2x) + 3px);
-		content: '';
-		display: block;
-		left: var(--4x);
-		opacity: 0;
-		position: absolute;
-		right: var(--4x);
-		top: var(--2x);
-		transition: var(--transition);
-		z-index: -1;
-	}
+    & li::before {
+        background: var(--gradient-teal-blue);
+        bottom: calc(var(--2x) + 3px);
+        content: "";
+        display: block;
+        left: var(--4x);
+        opacity: 0;
+        position: absolute;
+        right: var(--4x);
+        top: var(--2x);
+        transition: var(--transition);
+        z-index: -1;
+    }
 
-	& li::after {
-		background: var(--gradient-teal-blue);
-		bottom: 0;
-		content: '';
-		display: block;
-		height: 3px;
-		left: 0;
-		opacity: 0;
-		position: absolute;
-		transition: var(--transition);
-		width: 100%;
-	}
+    & li::after {
+        background: var(--gradient-teal-blue);
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 3px;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        transition: var(--transition);
+        width: 100%;
+    }
 
-	& li:hover {
-		text-decoration-color: currentColor;
-	}
+    & li:hover {
+        text-decoration-color: currentColor;
+    }
 
-	& li.is-active {
-		cursor: default;
-	}
+    & li.is-active {
+        cursor: default;
+    }
 
-	& li.is-active::before,
-	& li.is-active::after {
-		opacity: 1;
-	}
+    & li.is-active::before,
+    & li.is-active::after {
+        opacity: 1;
+    }
 }
 
 .Navigator::after {
-	background: var(--color-light-gray);
-	bottom: 0;
-	content: '';
-	display: block;
-	height: 3px;
-	left: 0;
-	position: absolute;
-	width: 100%;
-	z-index: 1;
+    background: var(--color-light-gray);
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
 }
 
 .Navigator-actions {
-	display: grid;
-	gap: var(--2x);
-	grid-auto-flow: column;
-	grid-template-columns: max-content;
-	position: relative;
-	z-index: 2;
-}
-
-.Navigator-preview {
-	appearance: none;
-	background: var(--color-white);
-	border: 1px solid var(--color-gray);
-	border-radius: 3px;
-	box-shadow: 0 1px 9px rgba(0, 0, 0, 0.1);
-	color: var(--color-black);
-	cursor: pointer;
-	font-size: var(--font-size-base);
-	font-weight: var(--font-weight-medium);
-	height: var(--5x);
-	line-height: calc(var(--5x) - 2px);
-	padding: 0 var(--3x);
-}
-
-.Navigator-update {
-	appearance: none;
-	background: radial-gradient(circle at right bottom, var(--color-accent-blue) 0%, var(--color-accent-teal) 100%);
-	border: 0;
-	border-radius: 3px;
-	box-shadow: 0 1px 9px rgba(0, 0, 0, 0.1);
-	color: var(--color-white);
-	cursor: pointer;
-	font-size: var(--font-size-base);
-	font-weight: var(--font-weight-medium);
-	height: var(--5x);
-	line-height: var(--5x);
-	padding: 0 var(--3x);
+    display: grid;
+    gap: var(--2x);
+    grid-auto-flow: column;
+    grid-template-columns: max-content;
+    position: relative;
+    z-index: 2;
 }
