--- a/packages/block-editor/src/components/Tooltip/style.css
+++ b/packages/block-editor/src/components/Tooltip/style.css
@@ -1,25 +1,139 @@
 .Tooltip {
-	background: var(--color-lighter-gray);
-	border-radius: var(--1x);
-	color: var(--color-dark-gray);
-	cursor: pointer;
-	font-size: var(--font-size-small);
-	font-weight: var(--font-weight-bold);
-	height: var(--2x);
-	line-height: var(--2x);
-	position: relative;
-	text-align: center;
-	transition: var(--transition);
-	width: var(--2x);
+    background: var(--color-lighter-gray);
+    border-radius: var(--1x);
+    color: var(--color-dark-gray);
+    cursor: pointer;
+    font-size: var(--font-size-small);
+    font-weight: var(--font-weight-bold);
+    height: var(--2x);
+    line-height: var(--2x);
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    transition: var(--transition);
+    width: var(--2x);
 }
 
 .Tooltip:hover {
-	background: var(--color-accent-teal-blue);
-	color: var(--color-white);
+    background: var(--color-accent-teal-blue);
+    color: var(--color-white);
+    overflow: visible;
+    z-index: 20;
 }
 
 .is-disabled .Tooltip:hover {
-	background: var(--color-lighter-gray);
-	color: var(--color-dark-gray);
-	cursor: default;
+    background: var(--color-lighter-gray);
+    color: var(--color-dark-gray);
+    cursor: default;
+}
+
+.Tooltip-link {
+    bottom: 0;
+    content: "";
+    display: block;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 10;
+}
+
+.Tooltip-label {
+    background: var(--color-black);
+    border-radius: 5px;
+    color: var(--color-white);
+    font-weight: var(--font-weight-semi-bold);
+    padding: var(--1x) var(--3x);
+
+    &:not(:last-child) {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+}
+
+.Tooltip-text {
+    display: grid;
+    gap: var(--2x);
+    justify-items: start;
+    padding: var(--2x) var(--3x);
+
+    p {
+        margin: 0;
+    }
+}
+
+.Tooltip-required {
+    background: var(--color-lighter-gray);
+    border-radius: var(--3x);
+    color: var(--color-gray);
+    font-size: var(--font-size-small);
+    font-weight: var(--font-weight-semi-bold);
+    line-height: var(--3x);
+    height: var(--3x);
+    padding: 0 var(--1x);
+    width: fit-content;
+}
+
+.Tooltip-message {
+    --caret-color: var(--color-white);
+    background: var(--color-white);
+    border-radius: 5px;
+    box-shadow: var(--box-shadow-medium);
+    color: var(--color-black);
+    font-size: var(--font-size-base);
+    font-weight: var(--font-weight-medium);
+    line-height: var(--line-height-base);
+    min-width: calc(1px * var(--width, 0));
+    opacity: 0;
+    position: absolute;
+    text-align: left;
+
+    &::before {
+        border-left: var(--1x) solid transparent;
+        border-right: var(--1x) solid transparent;
+        content: "";
+        display: block;
+        height: 0;
+        position: absolute;
+        width: 0;
+    }
+}
+
+.Tooltip:hover .Tooltip-message {
+    opacity: 1;
+}
+
+.Tooltip-message.is-above {
+    bottom: calc(100% + var(--1x) - 2px);
+
+    &::before {
+        border-top: var(--1x) solid var(--caret-color);
+        bottom: calc(-1 * var(--1x));
+    }
+}
+
+.Tooltip-message.is-below {
+    --caret-color: var(--color-black);
+    top: calc(100% + var(--1x) - 2px);
+
+    &::before {
+        border-bottom: var(--1x) solid var(--caret-color);
+        top: calc(-1 * var(--1x));
+    }
+}
+
+.Tooltip-message.is-left {
+    right: calc(-1 * var(--3x));
+
+    &::before {
+        right: var(--3x);
+    }
+}
+
+.Tooltip-message.is-right {
+    left: calc(-1 * var(--3x));
+
+    &::before {
+        left: var(--3x);
+    }
 }
