--- a/packages/block-editor/src/components/Button/style.css
+++ b/packages/block-editor/src/components/Button/style.css
@@ -1,7 +1,8 @@
 .Button {
+    --size: var(--5x);
     appearance: none;
-    background: var(--color-white);
-    border: 1px solid var(--color-light-gray);
+    background: var(--gradient-light-gray);
+    border: 0;
     border-radius: 5px;
     color: var(--color-black);
     cursor: pointer;
@@ -10,8 +11,9 @@
     grid-template-columns: max-content;
     font-size: var(--font-size-base);
     font-weight: var(--font-weight-semi-bold);
-    height: var(--5x);
-    line-height: calc(var(--5x) - 2px);
+    height: var(--size);
+    justify-content: center;
+    line-height: var(--size);
     overflow: hidden;
     padding: 0 var(--3x);
     position: relative;
@@ -22,10 +24,32 @@
     }
 }
 
+.Button.is-rounded {
+    border-radius: var(--size);
+}
+
+.Button.is-large {
+    --size: var(--6x);
+    font-weight: var(--font-weight-bold);
+}
+
+.Button.is-x-large {
+    --size: var(--7x);
+    font-size: var(--font-size-large);
+    font-weight: var(--font-weight-semi-bold);
+}
+
+.Button.is-outline {
+    background: var(--color-white);
+    border: 1px solid var(--color-light-gray);
+    color: var(--color-black);
+    line-height: calc(var(--size) - 2px);
+}
+
 .Button.is-primary {
     background: transparent;
-    border-color: transparent;
     color: var(--color-white);
+    transition: var(--transition);
 
     &::before,
     &::after {
@@ -38,7 +62,7 @@
         top: 50%;
         transform: translate(-50%, -50%);
         transform-origin: center;
-        transition: var(--transition-slow);
+        transition: var(--transition);
         width: 100%;
         z-index: -1;
     }
@@ -49,10 +73,7 @@
         animation-name: blueprint-blocks-block-editor-button-primary-background-rotate;
         animation-timing-function: linear;
         opacity: 0;
-    }
-
-    &:hover::before {
-        opacity: 0;
+        transition: var(--transition-slow);
     }
 
     &:hover::after {
@@ -61,13 +82,12 @@
 }
 
 .Button.is-primary.is-disabled {
-    background: var(--gradient-light-gray);
-    border-color: var(--color-gray);
+    background: var(--gradient-gray);
     color: var(--color-black);
 
     &::before,
     &::after {
-        display: none;
+        opacity: 0;
     }
 }
 
